--- a/QRCodeCreator/ImportExcel.xaml
+++ b/QRCodeCreator/ImportExcel.xaml
@@ -1,29 +1,29 @@
-﻿<Window x:Class="QRCodeCreator.ImportExcel"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:QRCodeCreator"
-        mc:Ignorable="d"
-        Title="ImportExcel" Height="600" Width="800">
+﻿<Window
+    x:Class="QRCodeCreator.ImportExcel"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:QRCodeCreator"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:wpfContorl="clr-namespace:Client.Components;assembly=WPFControls"
+    Title="ImportExcel"
+    Width="800"
+    Height="600"
+    mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
-            <TextBlock Margin="10 0">路径</TextBlock>
-            <TextBox x:Name="txtPath" Width="700"></TextBox>
-            <Button x:Name="btnImport" Margin="10 0">导入</Button>
-        </StackPanel>
-        <TextBlock x:Name="dgInfo"
-                   Grid.Row="1"
-                   ></TextBlock>
-        <DataGrid x:Name="dg"
-                  Grid.Row="2"
-                  AutoGenerateColumns="True">
 
-        </DataGrid>
+        <wpfContorl:UcSelectFile
+            x:Name="ucsfExcelFile"
+            Title="导入Excel文件"
+            Filter="Excel文件|*.xls;*.xlsx"
+            RegularExpressionFilter=".xls[x]{0,}$" />
+
+        <TabControl
+            x:Name="tabCtrl"
+            Grid.Row="1" />
     </Grid>
 </Window>
