--- a/QRCodeCreator/ImportExcel.xaml
+++ b/QRCodeCreator/ImportExcel.xaml
@@ -6,9 +6,10 @@
     xmlns:local="clr-namespace:QRCodeCreator"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:wpfContorl="clr-namespace:Client.Components;assembly=WPFControls"
-    Title="ImportExcel"
+    Title="导入Excel文件"
     Width="800"
     Height="600"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
