--- a/QRCodeCreator/MainWindow.xaml
+++ b/QRCodeCreator/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="QRCodeCreator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="二维码生成器" Height="350" Width="385">
+        Title="二维码生成器" Height="350" Width="385"
+		Left="100" Top="100"
+		>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
