--- a/QRCodeCreator/MainWindow.xaml
+++ b/QRCodeCreator/MainWindow.xaml
@@ -1,35 +1,60 @@
-﻿<Window x:Class="QRCodeCreator.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="二维码生成器" Height="350" Width="385"
-		Left="100" Top="100"
-		>
+﻿<Window
+    x:Class="QRCodeCreator.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="二维码生成器"
+    Width="385"
+    Height="350"
+    Left="100"
+    Top="100">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="370"></ColumnDefinition>
+            <ColumnDefinition Width="370" />
         </Grid.ColumnDefinitions>
-        <Image x:Name="img" Width="350" Height="350"></Image>
+        <Image
+            x:Name="img"
+            Width="350"
+            Height="350" />
 
-        <RichTextBox x:Name="txtQRCodeContent" Grid.Row="2"></RichTextBox>
+        <RichTextBox
+            x:Name="txtQRCodeContent"
+            Grid.Row="2" />
 
-        <StackPanel Grid.Row="1"
-                    Orientation="Horizontal">
-            <TextBlock Margin="5 0 0 0 " VerticalAlignment="Center">纠错级别：</TextBlock>
-            <ComboBox x:Name="cbErrorCorrectionLevel" Width="90">
-                <ComboBoxItem IsSelected="True" Tag="L">L-恢复7%</ComboBoxItem>
+        <StackPanel
+            Grid.Row="1"
+            Orientation="Horizontal">
+            <TextBlock
+                Margin="5,0,0,0"
+                VerticalAlignment="Center">
+                纠错级别：
+            </TextBlock>
+            <ComboBox
+                x:Name="cbErrorCorrectionLevel"
+                Width="90">
+                <ComboBoxItem Tag="L">L-恢复7%</ComboBoxItem>
                 <ComboBoxItem Tag="M">M-恢复15%</ComboBoxItem>
                 <ComboBoxItem Tag="Q">Q-恢复25%</ComboBoxItem>
-                <ComboBoxItem Tag="H">H-恢复30%</ComboBoxItem>
+                <ComboBoxItem Tag="H" IsSelected="True">H-恢复30%</ComboBoxItem>
             </ComboBox>
 
-            <TextBlock Margin="10 0 0 0 " VerticalAlignment="Center">文本编码：</TextBlock>
-            <ComboBox x:Name="cbCharacterSet" Width="150">
-                <ComboBoxItem IsSelected="True" Tag="UTF-8">Unicode (UTF-8)</ComboBoxItem>
+            <TextBlock
+                Margin="10,0,0,0"
+                VerticalAlignment="Center">
+                文本编码：
+            </TextBlock>
+            <ComboBox
+                x:Name="cbCharacterSet"
+                Width="150">
+                <ComboBoxItem
+                    IsSelected="True"
+                    Tag="UTF-8">
+                    Unicode (UTF-8)
+                </ComboBoxItem>
                 <ComboBoxItem Tag="gb2312">简体中文(GB-2312, 936)</ComboBoxItem>
                 <ComboBoxItem Tag="gb18030">简体中文(GB-18030)</ComboBoxItem>
             </ComboBox>
