--- a/QRCodeCreator/MainWindow.xaml
+++ b/QRCodeCreator/MainWindow.xaml
@@ -2,9 +2,10 @@
     x:Class="QRCodeCreator.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:wpfContorl="clr-namespace:Client.Components;assembly=WPFControls"
     Title="二维码生成器"
     Width="385"
-    Height="350"
+    Height="550"
     Left="100"
     Top="100">
     <Grid>
@@ -26,7 +27,11 @@
 
         <RichTextBox
             x:Name="txtQRCodeContent"
-            Grid.Row="2" />
+            Grid.Row="2"
+            MaxHeight="200"
+            ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <FlowDocument LineHeight="1" />
+        </RichTextBox>
 
         <StackPanel
             Grid.Row="1"
@@ -57,13 +62,17 @@
             <ComboBox
                 x:Name="cbCharacterSet"
                 Width="150">
-                <ComboBoxItem
-                    IsSelected="True"
-                    Tag="UTF-8">
-                    Unicode (UTF-8)
-                </ComboBoxItem>
-                <ComboBoxItem Tag="gb2312">简体中文(GB-2312, 936)</ComboBoxItem>
-                <ComboBoxItem Tag="gb18030">简体中文(GB-18030)</ComboBoxItem>
+                <ComboBoxItem IsSelected="True">UTF8</ComboBoxItem>
+                <ComboBoxItem>GB18030</ComboBoxItem>
+                <!--  测试成功 臺灣  -->
+                <ComboBoxItem>Big5</ComboBoxItem>
+                <!--  测试失败, 未能成功解释 조선글  -->
+                <ComboBoxItem>EUC_KR</ComboBoxItem>
+                <!--  测试成功 かんとう  -->
+                <ComboBoxItem>SJIS</ComboBoxItem>
+                <ComboBoxItem>--以下未能成功选择--</ComboBoxItem>
+                <ComboBoxItem>ASCII</ComboBoxItem>
+                <ComboBoxItem>UnicodeBigUnmarked</ComboBoxItem>
             </ComboBox>
 
 
@@ -78,69 +87,26 @@
             <Button x:Name="btnImportExcel">读取Excel文件</Button>
         </StackPanel>
 
-        <TextBox
+
+        <wpfContorl:TextBoxAdv
             x:Name="txtDecodeContent"
             Grid.Row="4"
-            IsReadOnly="True">
-            <TextBox.Resources>
-                <VisualBrush
-                    x:Key="txtDecodeContent_Placeholder"
-                    AlignmentX="Left"
-                    Stretch="None"
-                    TileMode="None">
-                    <VisualBrush.Visual>
-                        <TextBlock
-                            FontStyle="Italic"
-                            Foreground="Red"
-                            Text="解析条码内容" />
-                    </VisualBrush.Visual>
-                </VisualBrush>
-            </TextBox.Resources>
-            <TextBox.Style>
-                <Style TargetType="TextBox">
-                    <Style.Triggers>
-                        <Trigger Property="Text" Value="{x:Null}">
-                            <Setter Property="Background" Value="{StaticResource txtDecodeContent_Placeholder}" />
-                        </Trigger>
-                        <Trigger Property="Text" Value="">
-                            <Setter Property="Background" Value="{StaticResource txtDecodeContent_Placeholder}" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBox.Style>
-        </TextBox>
+            MaxHeight="200"
+            AcceptsReturn="True"
+            AcceptsTab="True"
+            IsReadOnly="True"
+            Placeholder="解析条码内容"
+            PlaceholderColor="Red"
+            ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.VerticalScrollBarVisibility="Auto"
+            TextWrapping="Wrap" />
 
-        <TextBox
+        <wpfContorl:TextBoxAdv
             x:Name="txtDecodeFormat"
             Grid.Row="5"
-            IsReadOnly="True">
-            <TextBox.Resources>
-                <VisualBrush
-                    x:Key="txtDecodeFormat_Placeholder"
-                    AlignmentX="Left"
-                    Stretch="None"
-                    TileMode="None">
-                    <VisualBrush.Visual>
-                        <TextBlock
-                            FontStyle="Italic"
-                            Foreground="Red"
-                            Text="解析条码格式" />
-                    </VisualBrush.Visual>
-                </VisualBrush>
-            </TextBox.Resources>
-            <TextBox.Style>
-                <Style TargetType="TextBox">
-                    <Style.Triggers>
-                        <Trigger Property="Text" Value="{x:Null}">
-                            <Setter Property="Background" Value="{StaticResource txtDecodeFormat_Placeholder}" />
-                        </Trigger>
-                        <Trigger Property="Text" Value="">
-                            <Setter Property="Background" Value="{StaticResource txtDecodeFormat_Placeholder}" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </TextBox.Style>
+            IsReadOnly="True"
+            Placeholder="解析条码格式"
+            PlaceholderColor="Red" />
 
-        </TextBox>
     </Grid>
 </Window>
